Make an actual working front-end app

--- a/problem-3/client/src/index.html
+++ b/problem-3/client/src/index.html
@@ -2,6 +2,6 @@
   <head>
   </head>
   <body>
-    <h1>It works!</h1>
+    <h1>It works! If you change index.html, your browser should reload!</h1>
   </body>
 </html>
